src/App.css
.App {
  text-align: left;
}

html {
    overflow-x: hidden;
}


@font-face {
  font-family:"Pixel";
  src: url("fonts/pixel.ttf") format("truetype");
}

@font-face {
  font-family:"Pixellari";
  src: url("fonts/pixellari.ttf") format("truetype");
}


.funds {
  font-family: "Pixel";
  font-size: 14px;
  color: #fee017;
  padding-left: 5px;
}

.levelUpTime {
  font-family: "Pixel";
  font-size: 12px;
  color: #d2b5a7;
  margin-top: 0px;
  height: 20px;
  margin-left: 0px;
}

.levelUpDone {
  font-family: "Pixel";
  font-size: 10px;
  color: #d2b5a7;
  margin-top: 0px;
  height: 20px;
}



.belowTheSewer {
  background-image: url("img/below_the_sewer.png") !important;
  height: 300px;
  z-index: 5;
  background: #000000;
}


.gourmetScene {
  background-image: url("img/gourmet_scene.gif");
  width: 180px;
  height: 300px;
}

.officeScene {
  width: 180px;
  height: 300px;
  padding: 20px 3px 106px 2px;
}

.office .ant-radio-button-wrapper {
  background: transparent;
  padding-right: 12px;
  padding-top: 5px;
  margin-top: 5px;
  padding-left: 10px;
  height: 26px;
  font-family: "Pixellari";
  font-size: 13px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: center;
  color: #fff;
}

.office .ant-radio-button-wrapper-checked {
  background: transparent !important;
  border: 2px solid #FFFFFF !important;
  height: 26px;
  position: relative;
  top: 1px;
}


.casualScene {
  background-image: url("img/casual_scene.gif");
  width: 180px;
  height: 300px;
}

.fastFoodScene {
  background-image: url("img/fastfood_scene.gif");
  width: 180px;
  height: 300px;
}

.roof {
  background-image: url("img/roof.png");
  background-repeat: no-repeat;
  background-size: 100%;
}

.roofCat {
  background-image: url("img/roof_cat.gif");
  background-repeat: no-repeat;
  background-size: 100%;
  position: relative;
  left: 56.5%;
  top: 49.5%;
}


.roofWall .ant-card-body {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
}

.invisibleWall .ant-card-body {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
  margin-top: -2px !important;
  margin-left: 12px;
  margin-right: 30px;
}

.invisibleWall .ant-card-bordered {
  border: 5px solid red;
}

.ant-card-bordered {
  border: 0px !important;
}

.stakeHouse .ant-card-bordered {
  background: #031636;
}


.house .ant-card-bordered {
  border: 0px;
}

.house .ant-card-body {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
  margin-top: -2px !important;
  margin-left: 17px;
  margin-right: 28px;
}

.stakeHouse {
  background-image: url("img/wall.png") !important;
}


.percentage {
  background-image: url("img/percentage.svg");
  width: 9px;
  height: 10px;
  color: red;
  border: 0px solid #000000;
  position: relative;
  margin-top: -11px;
  margin-left: 32px;
}


.colon {
  filter: invert(81%) sepia(35%) saturate(172%) hue-rotate(335deg) brightness(86%) contrast(92%);
}


.darkBackground {
  width: 100%;
  position: absolute;
  left: -100px;
  background: #000000;
  z-index: -2;
}




.percentageZero {
  background-image: url("img/percentage.svg");
  width: 9px;
  height: 10px;
  color: red;
  border: 0px solid #000000;
  position: relative;
  margin-top: -11px;
  margin-left: 15px;
}

.percentageInsanity {
  filter: invert(29%) sepia(72%) saturate(4426%) hue-rotate(282deg) brightness(111%) contrast(115%);
}

.percentageBodymass {
  filter: invert(72%) sepia(43%) saturate(3657%) hue-rotate(1deg) brightness(105%) contrast(103%);
}

.percentageSkill {
  filter: invert(77%) sepia(67%) saturate(2497%) hue-rotate(85deg) brightness(98%) contrast(91%);
}

.percentageIntelligence {
  filter: invert(60%) sepia(13%) saturate(4359%) hue-rotate(164deg) brightness(95%) contrast(93%);
}

.ant-layout-footer {
  color: #fff;
  text-align: center;
}

@media only screen and (min-width: 931px) {
  .ant-menu-item {
    padding-right: 0px !important;
    padding-left: 0px !important;
    margin-right: 15px !important;
    margin-left: 15px !important;
  }
}


.ant-layout-content {
  min-height: 120px;
  color: #000;
  line-height: 120px;
  text-align: left;
  padding-top: 2em;
  padding-bottom: 2em;
  z-index: 1;
}

.logo {
  float: left;
  width: 130px;
  height: 31px;
  background: #FFFFFF;
  margin-left: 15px;
  margin-top: 0px;
}

.ant-layout-header {
  background: #FFFFFF !important;
}

.nftProgress .ant-progress-inner{
  background-color: #4a413b;
  height: 12px;
  border-radius: 0px;
  border: 2px solid #000000;
}

.nftProgress .ant-progress-bg
{
  height: 8px !important;
  padding-top: 5px !important;
  margin-left: 0px !important;
  border-radius: 0px;
}


.nftProgressSecondRow .ant-progress-inner{
  background-color: #4a413b;
  height: 12px;
  border-radius: 0px;
  border: 2px solid #000000;
}

.nftProgressSecondRow .ant-progress-bg
{
  height: 8px !important;
  padding-top: 5px !important;
  margin-left: 0px !important;
  border-radius: 0px;
}

.chef-skill > .ant-progress-text
{
  color: #13e969;
  font-weight: bold;
  font-family: 'Pixel';
}

.rat-intelligence > .ant-progress-text
{
  color: #1eaeea;
  font-weight: bold;
  font-family: 'Pixel';
}

.chef-insanity > .ant-progress-text
{
  color: #fc24ff;
  font-weight: bold;
  font-family: 'Pixel';

}

.rat-fatness > .ant-progress-text
{
  color: #ffae00;
  font-weight: bold;
  font-family: 'Pixel';
}

.sky {
  width: 100%;
  height: 1000px;
  position: absolute;
  background: #000000;
  background-image: url("img/sky.png");
  background-size: cover;
  z-index: -1;
}

@media only screen and (max-width: 1080px) {
  .restaurantSign {
    position: absolute;
    top: 70px;
    left: -65px;
  }
}

@media only screen and (min-width: 1081px) {
  .restaurantSign {
    width: 154px;
    height: 152px;
    position: absolute;
    top: 70px;
    left: -155px;
  }
}

@media only screen and (min-width: 700px) {
  .skyline {
    background-position: 46% 75%;
  }
  .streetlight2 {
    left: 0px;
  }
}
/* ... */

